# Solana-Dapp-Tool

./: .env.production  .gitignore  CNAME  README.md  asset-manifest.json  id.json  index.html  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  test-deploy.yml
admin/: asset-manifest.json  index.html
apps/web/: next.config.ts  package.json
client/: .editorconfig  .env  .env.development  .env.production  .prettierrc  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
client/public/: index.html
client/src/: index.tsx  setupTests.ts
program/: Cargo.toml
program/src/: processor.rs
programs/hello-world/: Cargo.toml
programs/hello-world/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/hello-world/tests/: lib.rs
programs/transfer-tokens/: Cargo.toml
server/: nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.json
server/prisma/: schema.prisma
src/: index.css
src/locales/: en.json  zh.json
src/menuItems/: authentication.ts  tutorial.ts
src/routes/: MainRoute.tsx
static/css/: main.7fe9ae82.css
static/js/: 207.5a3d6508.chunk.js  207.ea6da7c0.chunk.js  298.a0e102d2.chunk.js  308.eb2a41b9.chunk.js  432.142ecfc1.chunk.js  437.f456509c.chunk.js  444.448e837e.chunk.js  452.db35aa43.chunk.js  504.f52ed801.chunk.js  556.f5953c4f.chunk.js  616.e074627c.chunk.js  64.b732f549.chunk.js  64.f42febf8.chunk.js  644.df70e2f9.chunk.js  658.84d7b9a5.chunk.js  66.8549a9a5.chunk.js  665.dae61c64.chunk.js  715.27189c29.chunk.js  715.aa91e020.chunk.js  (+34 more)
(+219 files in other folders)
